[package]
authors = ["deciduously <ben@deciduously.com>"]
name = "drat"
version = "0.0.1"
[[bin]]
name = "drat"
path = "src/backend/main.rs"

[dependencies]
actix = "0.7"
actix-web = "0.7"
chrono = "0.4"
dotenv = "0.13"
futures = "0.1"
log = "0.4"
pretty_env_logger = "0.2"
r2d2 = "0.8"
serde = "1"
serde_derive = "1"
serde_json = "1"

[dependencies.diesel]
features = ["postgres", "r2d2"]
version = "1"

[dependencies.uuid]
features = ["v4"]
version = "0.7"
